--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1 {
     color: #E6581A;
     background: #F2EEC7;
     text-align: center;
-    border: 20px double #333334;
+    border: 20px double black;
     margin-left: 15%;
     margin-right: 15%;
     padding: 15px;
@@ -21,12 +21,12 @@ p {
     font-size: 35px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     border-radius: 25px;
-    border: 15px double #333334;
+    border: 15px double black;
     text-align: center;
 }
 
 .thumbnail {
-    padding: 20px;
+    padding: 15px;
     transition: transform .3s; /* Animation */
     margin: 0 auto;
     height: 150px;
@@ -34,8 +34,8 @@ p {
 }
 
 .thumbnail:hover {
-    transform: scale(2.5);
-    display: table-caption;
+    transform: scale(2);
+    
 }
 
 .description {
@@ -44,13 +44,17 @@ p {
     text-align: center;
     font-family: 'Trebuchet MS';
     font-size: 20px;
+    padding: auto;
 }
 
-table tr td {
-    padding: 20px;
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 2fr 1fr 2fr 1fr;
+    background: #F2EEC7;
     text-align: center;
+    grid-row-gap: 10px;
+    border: 15px double black;
 }
 
 
-
-/*#b5ccb7*/ 
